infrastructure/controllers/monitoring/metrics-server.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metrics-server
  labels:
    vector.dev/exclude: "true"
