infrastructure/controllers/monitoring/monitoring.namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    # https://www.talos.dev/v1.7/kubernetes-guides/configuration/pod-security/
    pod-security.kubernetes.io/enforce: privileged
    vector.dev/exclude: "true"
