infrastructure/controllers/monitoring/monitoring.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Grafana"
    gethomepage.dev/icon: "si-grafana"
    gethomepage.dev/group: "Observability"
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${grafanaIngressHost}"
  rules:
    - backendRefs:
        - name: prometheus-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prometheus"
    gethomepage.dev/icon: "si-prometheus"
    gethomepage.dev/group: "Observability"
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${prometheusIngressHost}"
  rules:
    - backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Alertmanager"
    gethomepage.dev/icon: "si-prometheus"
    gethomepage.dev/group: "Observability"
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${alertmanagerIngressHost}"
  rules:
    - backendRefs:
        - name: prometheus-kube-prometheus-alertmanager
          port: 9093
